--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
     "        if self.move_num == BOARD_SQUARE_X * BOARD_SQUARE_Y - 3:\n",
     "            return True\n",
     "        \n",
-    "        # When the number of my pieces or opponent's became 0./.自分か相手のピースの数が0になった時\n",
+    "        # When the number of my pieces or opponent's became 0./ 自分か相手のピースの数が0になった時\n",
     "        (black_discs, white_discs) = self.get_pieces()\n",
     "        if black_discs == 0 or white_discs == 0:\n",
     "            return True\n",
@@ -240,13 +240,12 @@
     "        \n",
     "        return False\n",
     "    \n",
-    "    # Evaluate the game\n",
-    "    # Evaluate whether white or black is advantageous.\n",
-    "    # The evaluation value is positive if black is advantageous.\n",
+    "    # Evaluate whether white or black is advantageous. / 白か黒か、どちらが優勢かを評価する。\n",
+    "    # The evaluation value is positive if black is advantageous. / 評価値が正であれば黒が優勢。\n",
     "    def evaluation(self):\n",
     "        eval_val = 0\n",
     "        \n",
-    "        # When the game end.\n",
+    "        # When the game end. / 試合終了時の特殊処理\n",
     "        if self.is_game_end():\n",
     "            (black_pieces, white_pieces) = self.get_pieces()\n",
     "            eval_val = black_pieces - white_pieces\n",
@@ -256,8 +255,8 @@
     "                eval_val -= 1000\n",
     "            return eval_val\n",
     "        \n",
-    "        # Under playing.\n",
-    "        # Count each piece on the corner.\n",
+    "        # Under playing. / 試合中の評価値計算\n",
+    "        # Count each piece on the corner. / 四隅のコマをカウントする\n",
     "        corner = 0\n",
     "        for (y,x) in [(0,0), (0,7), (7,0), (7,7)]:\n",
     "            if self.board[y][x] == BLACK:\n",
@@ -265,11 +264,13 @@
     "            elif self.board[y][x] == WHITE:\n",
     "                corner -= 1\n",
     "                \n",
-    "        # Multiply number of corner peices and weight, then add it to evaluation value\n",
+    "        # Multiply number of corner peices and weight, then add it to evaluation value.\n",
+    "        # / 四隅のコマの数に重みを掛け、評価値に加算する。\n",
     "        # Weight = 16\n",
     "        eval_val += corner * 16\n",
     "        \n",
     "        # Count the number of spaces that can be put in a piece.\n",
+    "        # / 自分がコマを置けるスペースがいくつあるかをカウントする。\n",
     "        move_num = 0\n",
     "        move_list = self.get_move_list()\n",
     "        if self.turn == BLACK:\n",
@@ -277,17 +278,20 @@
     "        else:\n",
     "            move_num -= len(move_list)\n",
     "        \n",
-    "        # Count the spaces your opponent can put a piece in.\n",
-    "        # Pass the move then count.\n",
+    "        # Count the spaces your opponent can put a piece in. \n",
+    "        # / 相手がコマを置けるスペースがいくつあるかをカウントする。\n",
+    "        # Pass the move then count./ パスして、相手のスペースをカウントする。\n",
     "        self.move_pass()\n",
     "        move_list = self.get_move_list()\n",
     "        if self.turn == BLACK:\n",
     "            move_num += len(move_list)\n",
     "        else:\n",
     "            move_num -= len(move_list)\n",
-    "        self.move_pass()\n",
+    "        # パスを戻す。\n",
+    "        self.move_pass()  \n",
     "        \n",
-    "        # Multiply number of spaces and weight, then add it to evaluation value\n",
+    "        # Multiply number of spaces and weight, then add it to evaluation value \n",
+    "        # / 自分がコマを置けるスペースの数、相手がコマを置けるスペースの数に重きをかけて評価値に加算する。\n",
     "        # Weight = 2\n",
     "        eval_val += move_num * 2\n",
     "        \n",
@@ -303,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
