--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -51,7 +51,7 @@
     "GAME_END = 2\n",
     "HUMAN = 1\n",
     "COMPUTER = 0\n",
-    "TTHINK_LEVEL = 3\n",
+    "THINK_LEVEL = 3\n",
     "\n",
     "COLOR_PIECE_BLACK =  \"#566573\"\n",
     "COLOR_PIECE_WHITE =  \"#F8F9F9\"\n",
@@ -375,11 +375,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "Previous code.\n",
+    "~~~\n",
     "class Computer:\n",
     "    # Choose next move by computer.\n",
     "    def select_move(self, board):\n",
@@ -388,7 +388,43 @@
     "        move_list = board.get_move_list()\n",
     "        # Choose a next move at random\n",
     "        r = random.randint(0, len(move_list) - 1)\n",
-    "        return move_list[r]"
+    "        return move_list[r]\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Computer:\n",
+    "    # Choose next move by computer.\n",
+    "    def select_move(self, board):\n",
+    "        move_list = board.get_move_list()\n",
+    "        random.shuffle(move_list)\n",
+    "        \n",
+    "        think_level = TTHINK_LEVEL\n",
+    "        \n",
+    "        if board.turn == BLACK:\n",
+    "            best_eval = -10000\n",
+    "        else:\n",
+    "            best_eval = 10000\n",
+    "            \n",
+    "        for position in move_list:\n",
+    "            tmp_board = copy.deepcopy(board)\n",
+    "            tmp_board.move(position)\n",
+    "            eval = self.minmax(tmp_board, think_level-1)\n",
+    "            if board.turn == BLACK:\n",
+    "                if eval > best_eval:\n",
+    "                    best_eval = eval\n",
+    "                    best_position = position\n",
+    "            else:\n",
+    "                if eval < best_eval:\n",
+    "                    best_eval = eval\n",
+    "                    best_position = position\n",
+    "        print(str(board.move_num)) + \"best_eval : \" + str(best_eval)\n",
+    "        return best_position\n"
    ]
   },
   {
