--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -401,30 +401,72 @@
     "class Computer:\n",
     "    # Choose next move by computer.\n",
     "    def select_move(self, board):\n",
+    "        # Create all pattern of movement.\n",
     "        move_list = board.get_move_list()\n",
+    "        \n",
+    "        # Shuffle to make it harder to be the same move.\n",
     "        random.shuffle(move_list)\n",
     "        \n",
+    "        # Set the level of thinking.\n",
     "        think_level = TTHINK_LEVEL\n",
+    "        \n",
+    "        # Initialize the best_eval for each player.\n",
+    "        if board.turn == BLACK:\n",
+    "            best_eval = -10000\n",
+    "        else:\n",
+    "            best_eval = 10000\n",
+    "        \n",
+    "        # Evaluate the each position in the move_list.\n",
+    "        for position in move_list:\n",
+    "            # Copy the current game then advance the game.\n",
+    "            tmp_board = copy.deepcopy(board)\n",
+    "            tmp_board.move(position)\n",
+    "\n",
+    "            # Evaluate the game by minmax.\n",
+    "            eval_val = self.minmax(tmp_board, think_level-1)\n",
+    "            if board.turn == BLACK:\n",
+    "                if eval > best_eval:\n",
+    "                    best_eval = eval_val\n",
+    "                    best_position = position\n",
+    "            else:\n",
+    "                if eval_val < best_eval:\n",
+    "                    best_eval = eval_val\n",
+    "                    best_position = position\n",
+    "\n",
+    "        print(\"Term : \" + str(board.move_num) + \" / best_eval : \" + str(best_eval)\n",
+    "        return best_position\n",
+    "    \n",
+    "    # ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓\n",
+    "    # Evaluate the each position in the move_list by minmax.\n",
+    "    def minmax(self, board, depth):\n",
+    "        if depth <= 0 or board.is_game_end():\n",
+    "            return buad.evaluation()\n",
+    "        \n",
+    "        move_list = board.get_move_list()\n",
+    "        \n",
+    "        if len(move_list) == 0:\n",
+    "            tmp_board = copy.deepcopy(board)\n",
+    "            tmp_board.move_pass()\n",
+    "            return self.minmax(tmp_board, depth)\n",
     "        \n",
     "        if board.turn == BLACK:\n",
     "            best_eval = -10000\n",
     "        else:\n",
     "            best_eval = 10000\n",
-    "            \n",
+    "        \n",
     "        for position in move_list:\n",
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move(position)\n",
-    "            eval = self.minmax(tmp_board, think_level-1)\n",
-    "            if board.turn == BLACK:\n",
+    "            \n",
+    "            eval = self.minmax(tmp_board, depth -1)\n",
+    "            if board.turn == BACK:\n",
     "                if eval > best_eval:\n",
-    "                    best_eval = eval\n",
-    "                    best_position = position\n",
+    "                    best_eval - eval\n",
     "            else:\n",
     "                if eval < best_eval:\n",
-    "                    best_eval = eval\n",
-    "                    best_position = position\n",
-    "        print(str(board.move_num)) + \"best_eval : \" + str(best_eval)\n",
-    "        return best_position\n"
+    "                    best_eval =eval\n",
+    "\n",
+    "        return best_eval\n"
    ]
   },
   {
