--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -440,7 +440,7 @@
     "    # Evaluate the each position in the move_list by minmax.\n",
     "    def minmax(self, board, depth):\n",
     "        if depth <= 0 or board.is_game_end():\n",
-    "            return buad.evaluation()\n",
+    "            return board.evaluation()\n",
     "        \n",
     "        move_list = board.get_move_list()\n",
     "        \n",
@@ -458,15 +458,58 @@
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move(position)\n",
     "            \n",
-    "            eval = self.minmax(tmp_board, depth -1)\n",
+    "            eval_val = self.minmax(tmp_board, depth -1)\n",
+    "              \n",
     "            if board.turn == BACK:\n",
-    "                if eval > best_eval:\n",
-    "                    best_eval - eval\n",
+    "                if eval_val > best_eval:\n",
+    "                    best_eval - eval_val\n",
     "            else:\n",
-    "                if eval < best_eval:\n",
-    "                    best_eval =eval\n",
+    "                if eval_val < best_eval:\n",
+    "                    best_eval =eval_val\n",
     "\n",
-    "        return best_eval\n"
+    "        return best_eval\n",
+    "\n",
+    "              \n",
+    "              \n",
+    "    def alphabeta(self, board, depth, alpha, beta):\n",
+    "        if depth <= 0 or board.is_game_end():\n",
+    "            return board.evaluation()\n",
+    "        \n",
+    "        move_list = board.get_move_list()\n",
+    "        \n",
+    "        if len(move_list) == 0:\n",
+    "            tmp_board = copy.deepcopy(board)\n",
+    "            tmp_board.move_pass()\n",
+    "            return self.alphabeta(tmp_board, depth, alpha, beta)\n",
+    "        \n",
+    "        if board.turn == BLACK:\n",
+    "            best_eval = alpha\n",
+    "        else:\n",
+    "            best_eval = beta\n",
+    "        \n",
+    "        for position in move_list:\n",
+    "            tmp_board = copy.deepcopy(board)\n",
+    "            tmp_board.move(position)\n",
+    "            \n",
+    "            eval_val = self.alphabeta(tmp_board, depth-1, alpha, beta)\n",
+    "              \n",
+    "            if board.turn == BACK:\n",
+    "              if eval_val >= beta:\n",
+    "                  return eval_val\n",
+    "              if eval_val > best_eval:\n",
+    "                  best_eval = eval_val\n",
+    "                  if alpha < best_eval:\n",
+    "                      alpha = best_eval\n",
+    "            else:\n",
+    "              if eval <= alpha:\n",
+    "                  return eval_val\n",
+    "              if eval_val < best_eval:\n",
+    "                  best_ecal = eval_val\n",
+    "              if beta > best_eval:\n",
+    "                  beta = best_eval\n",
+    "        return best_eval\n",
+    "              \n",
+    "              "
    ]
   },
   {
