--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -436,30 +436,38 @@
     "        print(\"Term : \" + str(board.move_num) + \" / best_eval : \" + str(best_eval)\n",
     "        return best_position\n",
     "    \n",
-    "    # ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓\n",
     "    # Evaluate the each position in the move_list by minmax.\n",
     "    def minmax(self, board, depth):\n",
+    "        # Finish when the computer has done evaluating the move\n",
+    "        # to the level passed in the arguments, or the game has been over.\n",
     "        if depth <= 0 or board.is_game_end():\n",
     "            return board.evaluation()\n",
-    "        \n",
+    "              \n",
+    "        # Get all patterns of the movement.\n",
     "        move_list = board.get_move_list()\n",
     "        \n",
+    "        # In case there is no space to be moved a piece.\n",
     "        if len(move_list) == 0:\n",
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move_pass()\n",
+    "            # Recall.\n",
     "            return self.minmax(tmp_board, depth)\n",
     "        \n",
+    "        # Initialize the ealuated value.\n",
     "        if board.turn == BLACK:\n",
     "            best_eval = -10000\n",
     "        else:\n",
     "            best_eval = 10000\n",
     "        \n",
+    "        # \n",
     "        for position in move_list:\n",
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move(position)\n",
     "            \n",
     "            eval_val = self.minmax(tmp_board, depth -1)\n",
     "              \n",
+    "            # If the evaluated value is greater than the previous best value.\n",
+    "            # ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓\n",
     "            if board.turn == BACK:\n",
     "                if eval_val > best_eval:\n",
     "                    best_eval - eval_val\n",
