--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,6 +436,7 @@
     "        print(\"Term : \" + str(board.move_num) + \" / best_eval : \" + str(best_eval)\n",
     "        return best_position\n",
     "    \n",
+    "    #--------------------------------------------------------\n",
     "    # Evaluate the each position in the move_list by minmax.\n",
     "    def minmax(self, board, depth):\n",
     "        # Finish when the computer has done evaluating the move\n",
@@ -459,7 +460,7 @@
     "        else:\n",
     "            best_eval = 10000\n",
     "        \n",
-    "        # \n",
+    "        # Get the best value.\n",
     "        for position in move_list:\n",
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move(position)\n",
@@ -467,27 +468,32 @@
     "            eval_val = self.minmax(tmp_board, depth -1)\n",
     "              \n",
     "            # If the evaluated value is greater than the previous best value.\n",
-    "            # ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓\n",
     "            if board.turn == BACK:\n",
     "                if eval_val > best_eval:\n",
     "                    best_eval - eval_val\n",
     "            else:\n",
     "                if eval_val < best_eval:\n",
-    "                    best_eval =eval_val\n",
+    "                    best_eval = eval_val\n",
     "\n",
     "        return best_eval\n",
     "\n",
     "              \n",
-    "              \n",
+    "    #--------------------------------------------------------\n",
+    "    # Evaluate the best position in the move_list by alphabeta\n",
     "    def alphabeta(self, board, depth, alpha, beta):\n",
+    "        # Finish when the computer has done evaluating the move\n",
+    "        # to the level passed in the arguments, or the game has been over.\n",
     "        if depth <= 0 or board.is_game_end():\n",
     "            return board.evaluation()\n",
     "        \n",
+    "        # Get all patterns of the movement.\n",
     "        move_list = board.get_move_list()\n",
     "        \n",
+    "        # In case there is no space to be moved a piece.\n",
     "        if len(move_list) == 0:\n",
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move_pass()\n",
+    "            # Recall\n",
     "            return self.alphabeta(tmp_board, depth, alpha, beta)\n",
     "        \n",
     "        if board.turn == BLACK:\n",
@@ -499,26 +505,29 @@
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move(position)\n",
     "            \n",
+    "            # Recall\n",
     "            eval_val = self.alphabeta(tmp_board, depth-1, alpha, beta)\n",
     "              \n",
     "            if board.turn == BACK:\n",
     "              if eval_val >= beta:\n",
     "                  return eval_val\n",
+    "              \n",
     "              if eval_val > best_eval:\n",
     "                  best_eval = eval_val\n",
+    "              \n",
     "                  if alpha < best_eval:\n",
     "                      alpha = best_eval\n",
     "            else:\n",
     "              if eval <= alpha:\n",
     "                  return eval_val\n",
+    "              \n",
     "              if eval_val < best_eval:\n",
     "                  best_ecal = eval_val\n",
+    "              \n",
     "              if beta > best_eval:\n",
     "                  beta = best_eval\n",
     "              \n",
-    "        return best_eval\n",
-    "              \n",
-    "              "
+    "        return best_eval\n"
    ]
   },
   {
@@ -530,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
