--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -408,7 +408,7 @@
     "        random.shuffle(move_list)\n",
     "        \n",
     "        # Set the level of thinking.\n",
-    "        think_level = TTHINK_LEVEL\n",
+    "        think_level = THINK_LEVEL\n",
     "        \n",
     "        # Initialize the best_eval for each player.\n",
     "        if board.turn == BLACK:\n",
@@ -425,7 +425,7 @@
     "            # Evaluate the game by minmax.\n",
     "            eval_val = self.minmax(tmp_board, think_level-1)\n",
     "            if board.turn == BLACK:\n",
-    "                if eval > best_eval:\n",
+    "                if eval_val > best_eval:\n",
     "                    best_eval = eval_val\n",
     "                    best_position = position\n",
     "            else:\n",
@@ -433,7 +433,8 @@
     "                    best_eval = eval_val\n",
     "                    best_position = position\n",
     "\n",
-    "        print(\"Term : \" + str(board.move_num) + \" / best_eval : \" + str(best_eval)\n",
+    "            print(\"Term : \" + str(board.move_num) + \" / best_eval : \" + str(best_eval))\n",
+    "            \n",
     "        return best_position\n",
     "    \n",
     "    #--------------------------------------------------------\n",
@@ -468,9 +469,9 @@
     "            eval_val = self.minmax(tmp_board, depth -1)\n",
     "              \n",
     "            # If the evaluated value is greater than the previous best value.\n",
-    "            if board.turn == BACK:\n",
+    "            if board.turn == BLACK:\n",
     "                if eval_val > best_eval:\n",
-    "                    best_eval - eval_val\n",
+    "                    best_eval = eval_val\n",
     "            else:\n",
     "                if eval_val < best_eval:\n",
     "                    best_eval = eval_val\n",
@@ -508,24 +509,21 @@
     "            # Recall\n",
     "            eval_val = self.alphabeta(tmp_board, depth-1, alpha, beta)\n",
     "              \n",
-    "            if board.turn == BACK:\n",
-    "              if eval_val >= beta:\n",
-    "                  return eval_val\n",
-    "              \n",
-    "              if eval_val > best_eval:\n",
-    "                  best_eval = eval_val\n",
-    "              \n",
-    "                  if alpha < best_eval:\n",
-    "                      alpha = best_eval\n",
+    "            if board.turn == BLACK:\n",
+    "                if eval_val >= beta:\n",
+    "                    return eval_val\n",
+    "                \n",
+    "                if eval_val > best_eval:\n",
+    "                    best_eval = eval_val\n",
+    "                    if alpha < best_eval:\n",
+    "                        alpha = best_eval\n",
     "            else:\n",
-    "              if eval <= alpha:\n",
-    "                  return eval_val\n",
-    "              \n",
-    "              if eval_val < best_eval:\n",
-    "                  best_ecal = eval_val\n",
-    "              \n",
-    "              if beta > best_eval:\n",
-    "                  beta = best_eval\n",
+    "                if eval_val <= alpha:\n",
+    "                    return eval_val\n",
+    "                if eval_val < best_eval:\n",
+    "                    best_eval = eval_val\n",
+    "                    if beta > best_eval:\n",
+    "                        beta = best_eval\n",
     "              \n",
     "        return best_eval\n"
    ]
