--- a/study03-2_python_Tkinter_reversi.ipynb
+++ b/study03-2_python_Tkinter_reversi.ipynb
@@ -404,8 +404,19 @@
     "            tmp_board = copy.deepcopy(board)\n",
     "            tmp_board.move(position)\n",
     "\n",
-    "            # Evaluate the game by minmax.\n",
-    "            eval_val = self.minmax(tmp_board, think_level-1)\n",
+    "#            # Evaluate the game by minmax.\n",
+    "#            eval_val = self.minmax(tmp_board, think_level-1)\n",
+    "\n",
+    "            # Evaluate the game by alphabeta.\n",
+    "            if board.turn == BLACK:\n",
+    "                alpha = best_eval\n",
+    "                beta = 10000\n",
+    "            else:\n",
+    "                alpha = -10000\n",
+    "                beta = best_eval\n",
+    "                \n",
+    "            eval_val = self.alphabeta(tmp_board, think_level-1, alpha, beta)\n",
+    "\n",
     "            if board.turn == BLACK:\n",
     "                if eval_val > best_eval:\n",
     "                    best_eval = eval_val\n",
