--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# pygameを試す\n",
-    "  - pygameが動くpython 3.5の仮想環境を構築 `>conda create -n py35 python=3.5`"
+    "pygameは、現時点でPython 3.5の環境じゃないとインストールが出来ないので、仮想環境を作ってpygameを試す。\n",
+    "  - pygameが動くpython 3.5の仮想環境を構築する。 `>conda create -n py35 python=3.5`\n",
+    "  - pygameをインストールする。 `>conda install -c cogsci pygame`\n",
+    "  - プログラムを試す。"
    ]
   },
   {
@@ -18,11 +21,10 @@
     "~~~\n",
     "(base) C:\\***>conda info -e\n",
     "# conda environments:\n",
-    "#\n",
     "base                  *  C:\\***\\anaconda3\n",
     "~~~\n",
     "\n",
-    "### 1-2. 仮想環境を作成\n",
+    "### 1-2. py35という名前で仮想環境を作成\n",
     "現時点でpygameがpython3.5に対応しているため、python3.5をインストールする。\n",
     "~~~\n",
     "(base) C:\\***>conda create -n py35 python=3.5\n",
@@ -34,7 +36,6 @@
     "~~~\n",
     "(base) C:\\***>conda info -e\n",
     "# conda environments:\n",
-    "#\n",
     "base                  *  C:\\***\\anaconda3\n",
     "py35                     C:\\***\\anaconda3\\envs\\py35\n",
     "~~~\n",
@@ -42,24 +43,47 @@
     "### 1-4. 仮想環境を切り替え\n",
     "py35をactiveにする。\n",
     "~~~\n",
-    "(base) C:\\Users\\10007434>activate py35\n",
+    "(base) C:\\***>activate py35\n",
     "base                     C:\\***\\anaconda3\n",
     "py35                  *  C:\\***\\anaconda3\\envs\\py35\n",
     "~~~\n",
     "\n",
-    "### 1-5. py35の仮想環境を削除する場合。\n",
+    "### 1-5. py35環境にJupyterとSpyderをインストールする\n",
+    "~~~\n",
+    "(py35) C:\\***>conda install jupyter\n",
+    "(py35) C:\\***>conda install spyder\n",
+    "~~~\n",
+    "\n",
+    "### 1-6. 環境をアップデートしないとうまく動かなかったので、アップデートする。\n",
+    "\n",
+    "~~~\n",
+    ">conda update –all\n",
+    "~~~\n",
+    "\n",
+    "### py35の仮想環境を削除する場合。\n",
     "一旦対象をdeactivate。（baseをacctivate）し、ターミナルを再起動する。その後、py35の削除処理を行う。\n",
     "~~~\n",
     "(py35) C:\\***>conda.bat activate base\n",
-    "\n",
-    "(base) C:\\***>conda info -e\n",
-    "# conda environments:\n",
-    "#\n",
-    "base                  *  C:\\***\\anaconda3\n",
-    "py35                     C:\\***\\anaconda3\\envs\\py35\n",
-    "\n",
     "(base) C:\\***>conda remove -n py35 --all\n",
     "~~~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sys.version_info(major=3, minor=5, micro=6, releaselevel='final', serial=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version_info)"
    ]
   },
   {
@@ -86,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
