--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -57,7 +57,7 @@
     "### 1-6. 環境をアップデートしないとうまく動かなかったので、アップデートする。\n",
     "\n",
     "~~~\n",
-    ">conda update –all\n",
+    ">conda update –-all\n",
     "~~~\n",
     "\n",
     "### py35の仮想環境を削除する場合。\n",
@@ -69,21 +69,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. プログラムを試す"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "from pygame.locals import MOUSEBUTTONDOWN, QUIT\n",
+    "import sys\n",
+    "import random"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Agent:\n",
+    "    def __init__(self, x, y, vx, vy):\n",
+    "        self.x, self.y = x, y # position \n",
+    "        self.vx, self.vy = vx, vy # velocity\n",
+    "        \n",
+    "    def update(self, WINDOW_W, WINDOW_H):\n",
+    "        self.x += self.vx\n",
+    "        self.y += self.vy\n",
+    "        \n",
+    "        #Right edge.\n",
+    "        if self.x > WINDOW_W:\n",
+    "            self.vx, self.x = -self.vx, WINDOW_W\n",
+    "            return\n",
+    "        \n",
+    "        #Left edge.\n",
+    "        if self.x < 0:\n",
+    "            self.vx, self.x = -self.vx, 0\n",
+    "            return\n",
+    "        \n",
+    "        #Upper edge.\n",
+    "        if self.y > WINDOW_H:\n",
+    "            self.vy, self.y = -self.vy, WINDOW_H\n",
+    "            return\n",
+    "        #Lower edge.\n",
+    "        \n",
+    "        if self.y < 0:\n",
+    "            self.vy, self.y = -self.vy, 0\n",
+    "            return\n",
+    "\n",
+    "    def draw(self, screen):\n",
+    "        x, y = int(self.x), int(self.y)\n",
+    "        pygame.draw.circle(screen, (255,0,0),(x,y),5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sys.version_info(major=3, minor=5, micro=6, releaselevel='final', serial=0)\n"
+      "C:\\Users\\10007434\\AppData\\Local\\Continuum\\anaconda3\\envs\\py35\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2969: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "print(sys.version_info)"
+    "#main\n",
+    "WINDOW_W, WINDOW_H = 1000, 700\n",
+    "pygame.init()\n",
+    "#Create window.\n",
+    "screen = pygame.display.set_mode((WINDOW_W, WINDOW_H))\n",
+    "clock = pygame.time.Clock()\n",
+    "font = pygame.font.Font(None, 28)\n",
+    "agent_list = []\n",
+    "\n",
+    "while True:\n",
+    "    clock.tick(60)\n",
+    "    \n",
+    "    # Fill screen with white.\n",
+    "    screen.fill((255, 255, 255))\n",
+    "    \n",
+    "    # Process each agent.\n",
+    "    for a in agent_list:\n",
+    "        a.update(WINDOW_W, WINDOW_H)\n",
+    "        a.draw(screen)\n",
+    "    \n",
+    "    # Show the number of the agent.\n",
+    "    sl = \"agents : \" + str(len(agent_list))\n",
+    "    text = font.render(sl, True, (0,0,0))\n",
+    "    screen.blit(text, (1, 1))\n",
+    "\n",
+    "    # Process events.\n",
+    "    for e in pygame.event.get():\n",
+    "        # When clicked the left button on mouse.\n",
+    "        if e.type == MOUSEBUTTONDOWN and e.button==1:\n",
+    "            # Set velocity by use a random number.\n",
+    "            vx = random.uniform(-1.5,1.5)\n",
+    "            vy = random.uniform(-1.5,1.5)\n",
+    "            # create agents.\n",
+    "            a = Agent(e.pos[0], e.pos[1], vx, vy)\n",
+    "            # Add created agent into the agent list.\n",
+    "            agent_list.append(a)\n",
+    "        if e.type == QUIT:\n",
+    "            pygame.quit()\n",
+    "            sys.exit()\n",
+    "        \n",
+    "    pygame.display.update()\n",
+    "    "
    ]
   },
   {
