--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# pygameを試す\n",
+    "# python3.5の仮想環境を構築してpygameを試す\n",
     "pygameは、現時点でPython 3.5の環境じゃないとインストールが出来ないので、仮想環境を作ってpygameを試す。\n",
     "  - pygameが動くpython 3.5の仮想環境を構築する。 `>conda create -n py35 python=3.5`\n",
     "  - pygameをインストールする。 `>conda install -c cogsci pygame`\n",
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. python3.5の仮想環境構築\n",
+    "## 1. python3.5の仮想環境構築 (Anaconda Promptで実行)\n",
     "### 1-1. 現在の環境を確認\n",
     "baseの環境のみが存在している。\n",
     "~~~\n",
@@ -72,28 +72,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. プログラムを試す"
+    "## 2. pygameのサンプルプログラムを試す"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygame\n",
     "from pygame.locals import MOUSEBUTTONDOWN, QUIT\n",
     "import sys\n",
-    "import random"
+    "import random\n",
+    "import math"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Agent:\n",
+    "class Dot:\n",
     "    def __init__(self, x, y, vx, vy):\n",
     "        self.x, self.y = x, y # position \n",
     "        self.vx, self.vy = vx, vy # velocity\n",
@@ -124,32 +130,87 @@
     "\n",
     "    def draw(self, screen):\n",
     "        x, y = int(self.x), int(self.y)\n",
-    "        pygame.draw.circle(screen, (255,0,0),(x,y),5)"
+    "        pygame.draw.circle(screen, (255,0,0), (x,y), 5)\n",
+    "    \n",
+    "    # the rule of separation.\n",
+    "    def separation(self, r_s):\n",
+    "        tvx = tvy = c = 0\n",
+    "        \n",
+    "        for a in self.others:\n",
+    "            if a[1] < r_s and a[1] != 0:\n",
+    "                tvx -= (a[0].x - self.x) / a[1]\n",
+    "                tvy -= (a[0].y - self.y) / a[1]\n",
+    "                c += 1\n",
+    "                \n",
+    "        if c != 0:\n",
+    "            self.vx_s, self.vy_s = tvx / c, tvy / c\n",
+    "        else:\n",
+    "            self.vx_s, self.vy_s = self.vx, self.vy\n",
+    "    \n",
+    "    # the rule of alignment.\n",
+    "    def alignment(self, r_a):\n",
+    "        tvx = tvy = c = 0\n",
+    "        \n",
+    "        for a in self.others:\n",
+    "            if a[1] < r_a:\n",
+    "                tvx += a[0].vx\n",
+    "                tvy += a[0].vy\n",
+    "                c += 1\n",
+    "                \n",
+    "        if c != 0:\n",
+    "            self.vx_a, self.vy_a = tvx / c, tvy / c\n",
+    "        else:\n",
+    "            self.vx_a, self.vy_a = self.vx, self.vy\n",
+    "        \n",
+    "        \n",
+    "    # the rule of cohesion.\n",
+    "    def cohesion(self, r_c):\n",
+    "        tx = ty = c = 0\n",
+    "        \n",
+    "        for a in self.others:\n",
+    "            if a[1] < r_c:\n",
+    "                tx += a[0].x\n",
+    "                ty += a[0].y\n",
+    "                c += 1\n",
+    "                \n",
+    "        if c != 0:\n",
+    "            tx, ty = tx / c, ty / c\n",
+    "            d = math.sqrt((tx - self.x)**2 + (ty - self.y)**2)\n",
+    "            if d != 0:\n",
+    "                self.vx_c = (tx - self.x) / d\n",
+    "                self.vy_c = (ty - self.y) / d\n",
+    "        else:\n",
+    "            self.vx_c, self.vy_c = self.vx, self.vy\n",
+    "            \n",
+    "    def rule(self, agent_list, r_s, r_a, r_c):\n",
+    "        self.others = tuple([(a, math.sqrt((a.x - self.x)**2 \\\n",
+    "                            + (a.y - self.y)**2)) \\\n",
+    "                             for a in agent_list if a != self])\n",
+    "        \n",
+    "        if len(self.others) < 1: return\n",
+    "        \n",
+    "        self.separation(r_s)\n",
+    "        self.alignment(r_a)\n",
+    "        self.cohesion(r_c)\n",
+    "        \n",
+    "        tvx = self.vx_s * 1.0 + self.vx_a * 0.4 + self.vx_c * 0.2\n",
+    "        tvy = self.vy_s * 1.0 + self.vy_a * 0.4 + self.vy_c * 0.2\n",
+    "        \n",
+    "        n = math.sqrt(tvx**2 + tvy**2)\n",
+    "        \n",
+    "        self.vx, self.vy = 2 * tvx / n, 2 * tvy / n\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "            \n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\10007434\\AppData\\Local\\Continuum\\anaconda3\\envs\\py35\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2969: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#main\n",
     "WINDOW_W, WINDOW_H = 1000, 700\n",
@@ -159,6 +220,7 @@
     "clock = pygame.time.Clock()\n",
     "font = pygame.font.Font(None, 28)\n",
     "agent_list = []\n",
+    "rule_on = 1\n",
     "\n",
     "while True:\n",
     "    clock.tick(60)\n",
@@ -168,12 +230,17 @@
     "    \n",
     "    # Process each agent.\n",
     "    for a in agent_list:\n",
+    "        if rule_on == 1:\n",
+    "            a.rule(agent_list, 15, 30, 50)\n",
+    "            \n",
     "        a.update(WINDOW_W, WINDOW_H)\n",
     "        a.draw(screen)\n",
     "    \n",
     "    # Show the number of the agent.\n",
-    "    sl = \"agents : \" + str(len(agent_list))\n",
-    "    text = font.render(sl, True, (0,0,0))\n",
+    "    s1 = \"agents : \" + str(len(agent_list))\n",
+    "    s2 = \"rule : on\" if rule_on == 1 else \"rule : off\"\n",
+    "    \n",
+    "    text = font.render(s1 + \"  \" + s2, True, (0,0,0))\n",
     "    screen.blit(text, (1, 1))\n",
     "\n",
     "    # Process events.\n",
@@ -184,9 +251,13 @@
     "            vx = random.uniform(-1.5,1.5)\n",
     "            vy = random.uniform(-1.5,1.5)\n",
     "            # create agents.\n",
-    "            a = Agent(e.pos[0], e.pos[1], vx, vy)\n",
+    "            a = Dot(e.pos[0], e.pos[1], vx, vy)\n",
     "            # Add created agent into the agent list.\n",
     "            agent_list.append(a)\n",
+    "        \n",
+    "        if e.type == MOUSEBUTTONDOWN and e.button == 2:\n",
+    "            ruel_on = 1 - rule_on\n",
+    "            \n",
     "        if e.type == QUIT:\n",
     "            pygame.quit()\n",
     "            sys.exit()\n",
