--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -72,17 +72,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. pygameのサンプルプログラムを試す"
+    "## 2. pygameのサンプルプログラムを試す\n",
+    "ウィンドウ内をクリックすると赤い粒（Dot）が生成され、ウィンドウ内を有機的に動き回るサンプルプログラム。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "trailing comma not allowed without surrounding parentheses (<ipython-input-1-d2aed064fd76>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-d2aed064fd76>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    from pygame.locals import MOUSEBUTTONDOWN, QUIT,\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m trailing comma not allowed without surrounding parentheses\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
-    "from pygame.locals import MOUSEBUTTONDOWN, QUIT\n",
+    "from pygame.locals import MOUSEBUTTONDOWN, QUIT, \n",
     "import sys\n",
     "import random\n",
     "import math"
@@ -91,7 +101,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 2-1. Dotクラス生成"
+   ]
   },
   {
    "cell_type": "code",
@@ -100,6 +112,7 @@
    "outputs": [],
    "source": [
     "class Dot:\n",
+    "    \n",
     "    def __init__(self, x, y, vx, vy):\n",
     "        self.x, self.y = x, y # position \n",
     "        self.vx, self.vy = vx, vy # velocity\n",
@@ -199,9 +212,6 @@
     "        n = math.sqrt(tvx**2 + tvy**2)\n",
     "        \n",
     "        self.vx, self.vy = 2 * tvx / n, 2 * tvy / n\n",
-    "        \n",
-    "        \n",
-    "\n",
     "            \n",
     "            "
    ]
@@ -219,7 +229,7 @@
     "screen = pygame.display.set_mode((WINDOW_W, WINDOW_H))\n",
     "clock = pygame.time.Clock()\n",
     "font = pygame.font.Font(None, 28)\n",
-    "agent_list = []\n",
+    "dot_list = []\n",
     "rule_on = 1\n",
     "\n",
     "while True:\n",
@@ -229,15 +239,15 @@
     "    screen.fill((255, 255, 255))\n",
     "    \n",
     "    # Process each agent.\n",
-    "    for a in agent_list:\n",
+    "    for d in dot_list:\n",
     "        if rule_on == 1:\n",
-    "            a.rule(agent_list, 15, 30, 50)\n",
+    "            d.rule(dot_list, 15, 30, 50)\n",
     "            \n",
-    "        a.update(WINDOW_W, WINDOW_H)\n",
-    "        a.draw(screen)\n",
+    "        d.update(WINDOW_W, WINDOW_H)\n",
+    "        d.draw(screen)\n",
     "    \n",
     "    # Show the number of the agent.\n",
-    "    s1 = \"agents : \" + str(len(agent_list))\n",
+    "    s1 = \"dots : \" + str(len(dot_list))\n",
     "    s2 = \"rule : on\" if rule_on == 1 else \"rule : off\"\n",
     "    \n",
     "    text = font.render(s1 + \"  \" + s2, True, (0,0,0))\n",
@@ -246,16 +256,16 @@
     "    # Process events.\n",
     "    for e in pygame.event.get():\n",
     "        # When clicked the left button on mouse.\n",
-    "        if e.type == MOUSEBUTTONDOWN and e.button==1:\n",
-    "            # Set velocity by use a random number.\n",
-    "            vx = random.uniform(-1.5,1.5)\n",
-    "            vy = random.uniform(-1.5,1.5)\n",
-    "            # create agents.\n",
-    "            a = Dot(e.pos[0], e.pos[1], vx, vy)\n",
-    "            # Add created agent into the agent list.\n",
-    "            agent_list.append(a)\n",
+    "        if e.type == MOUSEBUTTONDOWN and ( e.button==4 or e.button==5):\n",
+    "            # Set velocity by use a random number. `numpy.random.uniform(low=0.0, high=1.0, size=None)`\n",
+    "            vx = random.uniform(-15, 15)\n",
+    "            vy = random.uniform(-15, 15)\n",
+    "            # Create a dot.\n",
+    "            dot = Dot(e.pos[0], e.pos[1], vx, vy)\n",
+    "            # Add created dot into the dot list.\n",
+    "            dot_list.append(dot)\n",
     "        \n",
-    "        if e.type == MOUSEBUTTONDOWN and e.button == 2:\n",
+    "        if e.type == MOUSEBUTTONDOWN and e.button == 1:\n",
     "            ruel_on = 1 - rule_on\n",
     "            \n",
     "        if e.type == QUIT:\n",
@@ -265,13 +275,6 @@
     "    pygame.display.update()\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
