--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -78,21 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "trailing comma not allowed without surrounding parentheses (<ipython-input-1-d2aed064fd76>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-d2aed064fd76>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    from pygame.locals import MOUSEBUTTONDOWN, QUIT,\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m trailing comma not allowed without surrounding parentheses\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
-    "from pygame.locals import MOUSEBUTTONDOWN, QUIT, \n",
+    "from pygame.locals import MOUSEBUTTONDOWN, QUIT\n",
     "import sys\n",
     "import random\n",
     "import math"
