--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -247,7 +247,7 @@
     "    # Process events.\n",
     "    for e in pygame.event.get():\n",
     "        # When clicked the left button on mouse.\n",
-    "        if e.type == MOUSEBUTTONDOWN and ( e.button==4 or e.button==5):\n",
+    "        if e.type == MOUSEBUTTONDOWN and ( e.button == 4 or e.button == 5 ):\n",
     "            # Set velocity by use a random number. `numpy.random.uniform(low=0.0, high=1.0, size=None)`\n",
     "            vx = random.uniform(-15, 15)\n",
     "            vy = random.uniform(-15, 15)\n",
@@ -257,7 +257,7 @@
     "            dot_list.append(dot)\n",
     "        \n",
     "        if e.type == MOUSEBUTTONDOWN and e.button == 1:\n",
-    "            ruel_on = 1 - rule_on\n",
+    "            rule_on = 1 - rule_on\n",
     "            \n",
     "        if e.type == QUIT:\n",
     "            pygame.quit()\n",
