--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -28,7 +28,6 @@
     "現時点でpygameがpython3.5に対応しているため、python3.5をインストールする。\n",
     "~~~\n",
     "(base) C:\\***>conda create -n py35 python=3.5\n",
-    "\n",
     "~~~\n",
     "\n",
     "### 1-3. 仮想環境が出来たか確認\n",
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,59 +212,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#main\n",
-    "WINDOW_W, WINDOW_H = 1000, 700\n",
+    "# Initialise screen\n",
     "pygame.init()\n",
-    "#Create window.\n",
+    "WINDOW_W, WINDOW_H = 800, 600\n",
     "screen = pygame.display.set_mode((WINDOW_W, WINDOW_H))\n",
-    "clock = pygame.time.Clock()\n",
+    "pygame.display.set_caption('Basic Pygame program')\n",
+    "\n",
+    "# Create the font object.\n",
+    "# `.font.Font(which font to use, the size of the font)`\n",
     "font = pygame.font.Font(None, 28)\n",
+    "\n",
+    "clock = pygame.time.Clock()\n",
     "dot_list = []\n",
     "rule_on = 1\n",
     "\n",
     "while True:\n",
+    "    # Set framerate. (FPS : frames per second.)\n",
     "    clock.tick(60)\n",
     "    \n",
-    "    # Fill screen with white.\n",
+    "    # Fill / refill screen with white.\n",
     "    screen.fill((255, 255, 255))\n",
     "    \n",
-    "    # Process each agent.\n",
+    "    # Process each dot.\n",
     "    for d in dot_list:\n",
     "        if rule_on == 1:\n",
     "            d.rule(dot_list, 15, 30, 50)\n",
-    "            \n",
+    "\n",
     "        d.update(WINDOW_W, WINDOW_H)\n",
     "        d.draw(screen)\n",
-    "    \n",
-    "    # Show the number of the agent.\n",
+    "\n",
+    "    # Show the number of the dots and whether the rule is being applied or not.\n",
+    "    # `.render(the text to be rendered, \n",
+    "    #          whether or not it should be anti-aliased (1=yes, 0=no),\n",
+    "    #          the color of the text )`\n",
     "    s1 = \"dots : \" + str(len(dot_list))\n",
-    "    s2 = \"rule : on\" if rule_on == 1 else \"rule : off\"\n",
-    "    \n",
-    "    text = font.render(s1 + \"  \" + s2, True, (0,0,0))\n",
+    "    if rule_on == 1:\n",
+    "        s2 = \"the rule is being applied.\"\n",
+    "        text = font.render(s1 + \" / \" + s2, True, (255,0,0), (255,239,213))\n",
+    "    else:\n",
+    "        s2 = \"the rule is off.\"\n",
+    "        text = font.render(s1 + \" / \" + s2, True, (60,179,113))\n",
+    "\n",
+    "\n",
+    "    # blit (bitblt : bit block transfer)\n",
     "    screen.blit(text, (1, 1))\n",
     "\n",
-    "    # Process events.\n",
+    "    # Get an event.\n",
     "    for e in pygame.event.get():\n",
-    "        # When clicked the left button on mouse.\n",
+    "\n",
+    "        # Create some dots at the mouse position when\n",
+    "        # the mouse wheel is turned forward or turned back.\n",
     "        if e.type == MOUSEBUTTONDOWN and ( e.button == 4 or e.button == 5 ):\n",
-    "            # Set velocity by use a random number. `numpy.random.uniform(low=0.0, high=1.0, size=None)`\n",
+    "\n",
+    "            # Set velocity by use a random number.\n",
+    "            # `numpy.random.uniform(low=0.0, high=1.0, size=None)`\n",
     "            vx = random.uniform(-15, 15)\n",
     "            vy = random.uniform(-15, 15)\n",
+    "\n",
     "            # Create a dot.\n",
     "            dot = Dot(e.pos[0], e.pos[1], vx, vy)\n",
-    "            # Add created dot into the dot list.\n",
+    "\n",
+    "            # Add created dot into the list.\n",
     "            dot_list.append(dot)\n",
-    "        \n",
+    "\n",
+    "        # Change the rule when the left button is pressed.\n",
     "        if e.type == MOUSEBUTTONDOWN and e.button == 1:\n",
     "            rule_on = 1 - rule_on\n",
-    "            \n",
+    "\n",
+    "        # Stop the application when 'close' button of\n",
+    "        # the window is pressed.\n",
     "        if e.type == QUIT:\n",
     "            pygame.quit()\n",
     "            sys.exit()\n",
-    "        \n",
-    "    pygame.display.update()\n",
-    "    "
+    "\n",
+    "    pygame.display.update()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
