--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -103,39 +103,48 @@
    "source": [
     "class Dot:\n",
     "    \n",
+    "    # Initialize the object.\n",
     "    def __init__(self, x, y, vx, vy):\n",
-    "        self.x, self.y = x, y # position \n",
-    "        self.vx, self.vy = vx, vy # velocity\n",
-    "        \n",
+    "        # position coordinates.\n",
+    "        self.x, self.y = x, y\n",
+    "        # velocity.\n",
+    "        self.vx, self.vy = vx, vy\n",
+    "\n",
+    "    # When the dot reached each edge of the window, \n",
+    "    # reverse the direction of velocity.\n",
     "    def update(self, WINDOW_W, WINDOW_H):\n",
     "        self.x += self.vx\n",
     "        self.y += self.vy\n",
     "        \n",
-    "        #Right edge.\n",
+    "        # Right edge.\n",
     "        if self.x > WINDOW_W:\n",
     "            self.vx, self.x = -self.vx, WINDOW_W\n",
     "            return\n",
     "        \n",
-    "        #Left edge.\n",
+    "        # Left edge.\n",
     "        if self.x < 0:\n",
     "            self.vx, self.x = -self.vx, 0\n",
     "            return\n",
     "        \n",
-    "        #Upper edge.\n",
+    "        # Upper edge.\n",
     "        if self.y > WINDOW_H:\n",
     "            self.vy, self.y = -self.vy, WINDOW_H\n",
     "            return\n",
-    "        #Lower edge.\n",
-    "        \n",
+    "\n",
+    "        # Lower edge.\n",
     "        if self.y < 0:\n",
     "            self.vy, self.y = -self.vy, 0\n",
     "            return\n",
     "\n",
+    "    # Draw a dot on the screen.\n",
+    "    # `circle(surface, color, center, radius)`\n",
+    "    # `circle(surface, color, center, radius, width=0)`\n",
     "    def draw(self, screen):\n",
     "        x, y = int(self.x), int(self.y)\n",
-    "        pygame.draw.circle(screen, (255,0,0), (x,y), 5)\n",
+    "        pygame.draw.circle(screen, (255,0,0), (x,y), 5, 1)\n",
     "    \n",
-    "    # the rule of separation.\n",
+    "    # The rule of separation.\n",
+    "    # r_s : \n",
     "    def separation(self, r_s):\n",
     "        tvx = tvy = c = 0\n",
     "        \n",
@@ -208,9 +217,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\10007434\\AppData\\Local\\Continuum\\anaconda3\\envs\\py35\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2969: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialise screen\n",
     "pygame.init()\n",
