--- a/study05_pygame.ipynb
+++ b/study05_pygame.ipynb
@@ -195,9 +195,19 @@
     "            self.vx_c, self.vy_c = self.vx, self.vy\n",
     "            \n",
     "    def rule(self, agent_list, r_s, r_a, r_c):\n",
-    "        self.others = tuple([(a, math.sqrt((a.x - self.x)**2 \\\n",
-    "                            + (a.y - self.y)**2)) \\\n",
-    "                             for a in agent_list if a != self])\n",
+    "        #self.others = tuple([(a, math.sqrt((a.x - self.x)**2 \\\n",
+    "        #                    + (a.y - self.y)**2)) \\\n",
+    "        #                     for a in agent_list if a != self])\n",
+    "        \n",
+    "        tpls = ()\n",
+    "        for a in agent_list:\n",
+    "            if a != self:\n",
+    "                dist= math.sqrt((a.x - self.x)**2 + (a.y - self.y)**2)\n",
+    "                tpl = tuple([(a, dist)])\n",
+    "                tpls = tpls + tpl                \n",
+    "\n",
+    "        self.others = tpls\n",
+    "        \n",
     "        \n",
     "        if len(self.others) < 1: return\n",
     "        \n",
